# ScoutSearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml
data/: dummy.json  index.pkl
data/benchmarks/: main.json
datasets/: loader.py
datasets/abc_news/: README.md  prepare.py  sample.jsonl
demo_data/: stats.pkl
scout/: benchmark.py  cli.py  explain.py  ingest.py
scout/benchmarks/: __init__.py  aggregate.py  artifacts.py  baselines.py  bm25_only.py  config_loader.py  config_schema.py  explainability.py  index.py  metrics.py  regression.py  run.py  synthetic.py  thresholds.py  utils.py
scout/benchmarks/configs/: example_benchmark.json
scout/data/: generators.py  loader.py
scout/index/: builder.py  inverted.py  stats.py  tokens.py
scout/ranking/: base.py  bm25.py  composite.py  fusion.py  recency.py  robust.py  tf.py  tfidf.py
scout/search/: engine.py  query.py
scout/state/: persistence.py  signals.py  store.py
scout/storage/: paths.py  serializer.py
scripts/: prepare_abc_news.py
src/data/: dummy.json
src/scout/: cli.py  explain.py  ingest.py
src/scout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scout/benchmarks/: __init__.py  aggregate.py  artifacts.py  baselines.py  bm25_only.py  config_schema.py  explainability.py  index.py  metrics.py  regression.py  run.py  synthetic.py  thresholds.py  utils.py
src/scout/benchmarks/configs/: example_benchmark.json
src/scout/data/: generators.py  loader.py
src/scout/index/: builder.py  inverted.py  stats.py  tokens.py
src/scout/ranking/: base.py  bm25.py  composite.py  fusion.py  recency.py  robust.py  tf.py  tfidf.py
src/scout/search/: engine.py  query.py
src/scout/state/: persistence.py  signals.py  store.py
src/scout/storage/: serializer.py
tests/: conftest.py  test_autosave.py  test_benchmark.py  test_cli.py  test_determinism.py  test_explain.py  test_incremental_indexing.py  test_index_builder.py  test_or_query.py  test_performance.py  test_persistence.py  test_query_execution.py  test_query_parsing.py  test_ranking.py  test_regression.py  test_search.py  test_tokenizer.py
