[tool.poetry]
name = "scout"
version = "0.1.0"
description = "ScoutSearch benchmark and search project"
authors = ["Bonnie McConnell bonniep.mcconnell@gmail.com"]
packages = [
    { include = "scout" }
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^14.2"
numpy = "^2.4"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[tool.poetry.scripts]
scout = "scout.cli:main"

[mypy]
python_version = 3.11
strict = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true

[mypy-scout.*]
ignore_missing_imports = false
