[project]
name = "scout"
version = "0.1.0"
description = "ScoutSearch benchmark and search project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bonnie McConnell", email = "bonniep.mcconnell@gmail.com" }
]
license = { text = "MIT" }
keywords = ["search", "benchmark", "information-retrieval"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "rich>=14.2",
    "numpy>=2.4",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5.5",
    "mypy>=1.10.0",
]

[project.scripts]
scout = "scout.cli:main"

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scout.*"]
ignore_missing_imports = false

[tool.pytest.ini_options]
markers = [
    "performance: marks performance-sensitive tests"
]
